--- a/src/install/files/extensions.json
+++ b/src/install/files/extensions.json
@@ -3,13 +3,17 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-		"eg2.tslint",
-		"angular.ng-template",
+		"mikael.angular-beastcode",
 		"infinity1207.angular2-switcher",
-		"johnpapa.angular2",
-    "msjsdiag.debugger-for-chrome",
-    "editorconfig.editorconfig",
-    "pkief.material-icon-theme",
-    "esbenp.prettier-vscode"
+		"steoates.autoimport",
+		"formulahendry.auto-rename-tag",
+		"coenraads.bracket-pair-colorizer",
+		"msjsdiag.debugger-for-chrome",
+		"editorconfig.editorconfig",
+		"glen-84.sass-lint",
+		"miclo.sort-typescript-imports",
+		"ms-vscode.vscode-typescript-tslint-plugin",
+		"vscode-icons-team.vscode-icons",
+		"Angular.ng-template"
 	]
 }
